tinyc/test/bad/null-redeclare-enum.c
int main()
{
    enum
    {
        NULL = 0,
    };
    return 0;
}
